--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <title>Horiseon Digital Marketing</title>
 </head>
 
@@ -34,7 +34,7 @@
 
     <!--Here starts the main image of a marketing meeting..its the biggest image on the page-->
     <figure>
-    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="employees of a digital marketing company having a meeting about their next project"/>
+    <img class="hero" src="./Assets/images/digital-marketing-meeting.jpg" alt="employees of a digital marketing company having a meeting about their next project"/>
     </figure>
 
     <!--Here starts the main content-->
@@ -42,7 +42,7 @@
 
         <article id="search-engine-optimization">
 
-            <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="A book with notes about how to create priority SEO for a website"/>
+            <img class="float-left" src="./Assets/images/search-engine-optimization.jpg" alt="A book with notes about how to create priority SEO for a website"/>
 
             <h2>Search Engine Optimization</h2>
 
@@ -54,7 +54,7 @@
 
         <article id="online-reputation-management">
 
-            <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management"/>
+            <img class="float-right" src="./Assets/images/online-reputation-management.jpg" alt="online-reputation-management"/>
 
             <h2>Online Reputation Management</h2>
 
@@ -66,7 +66,7 @@
 
         <article id="social-media-marketing">
 
-            <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing"/>
+            <img class="float-left" src="./Assets/images/social-media-marketing.jpg" alt="social-media-marketing"/>
 
             <h2>Social Media Marketing</h2>
 
@@ -86,7 +86,7 @@
 
             <h3>Lead Generation</h3>
 
-            <img src="./assets/images/lead-generation.png" alt="lead-generation" />
+            <img src="./Assets/images/lead-generation.png" alt="lead-generation" />
 
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -98,7 +98,7 @@
 
             <h3>Brand Awareness</h3>
 
-            <img src="./assets/images/brand-awareness.png" alt="benefit-brand"/>
+            <img src="./Assets/images/brand-awareness.png" alt="benefit-brand"/>
 
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -110,7 +110,7 @@
 
             <h3>Cost Management</h3>
 
-            <img src="./assets/images/cost-management.png" alt="cost-management"/>
+            <img src="./Assets/images/cost-management.png" alt="cost-management"/>
 
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
